--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>intruduktions text</p>
             <div>fakta inboxat</div>
             <article>citat</article>
-            <img src="" alt="foto på Lukas" />
+            <img src="/Lukas.bild.jpg" alt="foto på Lukas" height="100px"/>
             <br /><br />
         </header>
         <footer>
