--- a/index.kontakt.html
+++ b/index.kontakt.html
@@ -5,19 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kontaktsida</title>
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
+        <h3>Kontaktformulär</h3>
         <!-- Ett formulär för att kontakta mig. -->
-        <label for=""></label>
-        <input type="text" id="" />
-
-        <label for=""></label>
-        <input type="text" id="" />
-
-        <label for=""></label>
-        <input type="text" id="" />
-
-        <input type="submit" value="submit" /> <br /><br />
+        <label for="Förnamn">Förnamn:</label>
+        <input type="text" id="Förnamn" />
+        <br /><br />
+        <label for="Efternamn">Efternamn:</label>
+        <input type="text" id="Efternamn" />
+        <br /><br />
+        <label for="Nummber">Telefonnummber:</label>
+        <input type="text" id="telenummber" />
+        <br /><br />
+        <input type="submit" value="submit" />
+        <br /><br />
         <footer>
             <!--länkar till dem två andra sidorna-->
             <a href="/index.html">Startsida</a> |
