--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <!--navigastion bar -->
             <a href="/index.inspo.html"> Insperationssida</a> |
             <a href="/index.kontakt.html"> Kontaktsida </a>
+            <br>
+
+            <!--socila medier--> 
+            <a href=""></a>
+            <a href=""></a>
+           
         </footer>
     </body>
 </html>
