--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     </head>
     <body>
         <header>
-            <h1>Lukas Janfelt</h1>
-            <p>intruduktions text</p>
-            <div> fakta inboxat</div>
-            <article>citat</article>
-            <img src="/Lukas.bild.jpg" alt="foto på Lukas" height="100px" />
+            <h1>Lukas Janfelt</h1> <!--Rubrik-->
+            <p>intruduktions text</p> <!--Intruduktion-->
+            <div id="faktabox"> fakta inboxat</div> <!--Div med fakta om mig-->
+            <article id="citat">"Äsch, Det kunde varit värre!"</article>  <!--Mitt egna citat-->
+            <img src="/Lukas.bild.jpg" alt="foto på Lukas" height="100px" id="porträtt"/> <!--Bild på mig-->
             <br />
             <br />
         </header>
 
         <!--navigastion bar -->
-        <a href="/inspo.html" id="inspo"> Insperationssida</a> |
+        <a href="/inspo.html" id="inspo"> Insperationssida</a> 
         <a href="/kontakt.html" id="kontakt"> Kontaktsida </a>
         <br />
         <footer>
@@ -33,9 +33,11 @@
              </a>
     
              <a href="https://www.facebook.com/lukas.janfelt/" target="_blank">
-                <img src="/facebook.png" alt="Lukas facebook" id="facebook" height="100vmax" width="100vmax">
+                <img src="/FB.jpg" alt="Lukas facebook" id="facebook" height="80vmax" width="80vmax">
              </a>
 
         </footer>
+
+        
     </body>
 </html>
