--- a/inspo.html
+++ b/inspo.html
@@ -13,9 +13,11 @@
             <p>saker som inspirerar, kort</p>
             <!-- insperationslänkar-->
 
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
+            <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank">Combat Jujutsu</a> 
+            <br>
+            <a href="https://eu.super73.com/" target="_blank"> Supper73</a>
+            <br>
+            <a href="https://www.ultimate-guitar.com/" target="_blank">Ultimate guitar</a>
             <br />
         </header>
         <!--Länkar till de två andra sidorna i form av en navigations bar -->
@@ -24,6 +26,7 @@
         <a href="/kontakt.html" id="kontakt">Kontaktsida</a>
 
         <footer>
+            <!--socila medier-->
             <a
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
                 target="_blank"
