--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
         </header>
 
         <main>
-            <!--label och input för frågeformulär-->
+            <!--label för frågeformulär-->
             <div id="labels">
                 <label for="Förnamn">Förnamn:</label>
                 <label for="Efternamn">Efternamn:</label>
@@ -23,7 +23,7 @@
                 <label for="Date">Datum:</label>
             </div>
             <div id="form-input">
-
+                <!--input för frågeformulär-->
                 <input type="text" id="förnamn" />
                 <input type="text" id="efternamn" />
                 <input type="email" name="emailAddress" id="emailAddress" />
@@ -42,6 +42,7 @@
         <a href="/index.html" id="startsida">Startsida</a> |
         <a href="/inspo.html" id="inspo">Insperationssida</a>
         <footer>
+             <!--socila medier-->
             <a class="insta"
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
                 target="_blank"
