--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="/kontakt.html" id="kontakt"> Kontaktsida </a>
         <br />
         <footer>
+             <!--socila medier-->
             <a
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
                 target="_blank"
