--- a/inspo.html
+++ b/inspo.html
@@ -9,49 +9,39 @@
     </head>
     <body>
         <header>
-            <h2>citat eller hobby</h2>
-            <p>saker som inspirerar, kort</p>
-            <!-- insperationslänkar-->
-
-            <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank">Combat Jujutsu</a> 
-            <br>
+            <h2 class="rubrik">Kampsport, Cykling & Musik</h2>           <!--mellan rubrik-->
+            <br /><br />
+            <p>
+                På fritiden håller jag på med cykling och musik, jag har även trännat kamsport i 10 år.</p>  <!--text-->
+           
+            <br />
+            <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank">Combat Jujutsu</a>  <!-- insperationslänkar-->
+            <br />
             <a href="https://eu.super73.com/" target="_blank"> Supper73</a>
-            <br>
-            <a href="https://www.ultimate-guitar.com/" target="_blank">Ultimate guitar</a>
+            <br />
+            <a href="https://www.ultimate-guitar.com/" target="_blank"
+                >Ultimate guitar</a>
+            <br />
             <br />
         </header>
-        <!--Länkar till de två andra sidorna i form av en navigations bar -->
-
-        <a href="/index.html" id="startsida">Startsida</a> |
+        <section>
+        <a href="/index.html" id="startsida">Startsida</a> |          <!--navigations bar -->
         <a href="/kontakt.html" id="kontakt">Kontaktsida</a>
+        </section>
 
         <footer>
-            <!--socila medier-->
+            
             <a
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
-                target="_blank"
-            >
-                <img
-                    src="/insta.png"
-                    alt="insta"
-                    id="instagram"
-                    height="100vmax"
-                    width="150vmax"
-                />
+                target="_blank">                                                <!--socila medier-->
+                <img src="/insta.png" alt="insta" id="instagram" />
             </a>
 
             <a href="https://www.facebook.com/lukas.janfelt/" target="_blank">
-                <img
-                    src="/FB.jpg"
-                    alt="Lukas facebook"
-                    id="facebook"
-                    height="75vmax"
-                    width="75vmax"
-                />
+                <img src="/FB.jpg" alt="Lukas facebook" id="facebook" />
             </a>
-            <br>
-            <!--copyright -->
-            &copy; Copyright 2023 HTML.Lukas.Janfelt
+            <br />
+            &copy; Copyright 2023 HTML.Lukas.Janfelt                 <!--copyright -->
         </footer>
     </body>
 </html>
