--- a/inspo.html
+++ b/inspo.html
@@ -25,8 +25,8 @@
             <br />
         </header>
         <section>
-        <a href="/index.html" id="startsida">Startsida</a> |          <!--navigations bar -->
-        <a href="/kontakt.html" id="kontakt">Kontaktsida</a>
+        <a href="index.html" id="startsida">Startsida</a> |          <!--navigations bar -->
+        <a href="kontakt.html" id="kontakt">Kontaktsida</a>
         </section>
 
         <footer>
@@ -34,11 +34,11 @@
             <a
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
                 target="_blank">                                                <!--socila medier-->
-                <img src="/insta.png" alt="insta" id="instagram" />
+                <img src="insta.png" alt="insta" id="instagram" />
             </a>
 
             <a href="https://www.facebook.com/lukas.janfelt/" target="_blank">
-                <img src="/FB.jpg" alt="Lukas facebook" id="facebook" />
+                <img src="FB.jpg" alt="Lukas facebook" id="facebook" />
             </a>
             <br />
             &copy; Copyright 2023 HTML.Lukas.Janfelt                 <!--copyright -->
