--- a/kontakt.html
+++ b/kontakt.html
@@ -34,8 +34,8 @@
         </main>
 
         <section>                                                                  <!--länkar till dem två andra sidorna-->
-        <a href="/index.html" id="startsida">Startsida</a> |
-        <a href="/inspo.html" id="inspo">Insperationssida</a>
+        <a href="index.html" id="startsida">Startsida</a> |
+        <a href="inspo.html" id="inspo">Insperationssida</a>
         </section>
         <footer>
           
@@ -43,7 +43,7 @@
                 class="insta"
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
                 target="_blank">                                              <!--socila medier-->
-                <img src="/insta.png" alt="insta" id="instagram" />
+                <img src="insta.png" alt="insta" id="instagram" />
             </a>
 
             <a
@@ -51,7 +51,7 @@
                 href="https://www.facebook.com/lukas.janfelt/"
                 target="_blank"
             >
-                <img src="/FB.jpg" alt="Lukas facebook" id="facebook" />
+                <img src="FB.jpg" alt="Lukas facebook" id="facebook" />
             </a>
             <br />
             &copy; Copyright 2023 HTML.Lukas.Janfelt                         <!--copyright -->
