--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </article>   <!--Mitt egna citat-->
 
            
-            <img src="Lukas.bild.jpg" alt="foto på Lukas" id="porträtt" />   <!--Bild på mig-->
+            <img src="Lukas-bild.jpg" alt="foto på Lukas" id="porträtt" />   <!--Bild på mig-->
             <br />
             <br />
         </nav>
