--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
         
         <section>                
-        <a href="inspo.html" id="inspo"> Insperationssida</a>                   <!--navigastion bar -->
+        <a href="inspo.html" id="inspo"> Inspirationssida</a>                   <!--navigastion bar -->
         <a href="kontakt.html" id="kontakt"> Kontaktsida </a>
         </section>
         <br />
