--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
 
         <section>                                                                  <!--länkar till dem två andra sidorna-->
         <a href="index.html" id="startsida">Startsida</a> |
-        <a href="inspo.html" id="inspo">Insperationssida</a>
+        <a href="inspo.html" id="inspo">Inspirationssida</a>
         </section>
         <footer>
           
