--- a/inspo.html
+++ b/inspo.html
@@ -12,12 +12,12 @@
             <h2 class="rubrik">Kampsport, Cykling & Musik</h2>           <!--mellan rubrik-->
             <br /><br />
             <p>
-                På fritiden håller jag på med cykling och musik, jag har även trännat kamsport i 10 år.</p>  <!--text-->
+                På fritiden håller jag på med cykling och musik, jag har även tränat kamsport i 10 år.</p>  <!--text-->
            
             <br />
             <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank">Combat Jujutsu</a>  <!-- insperationslänkar-->
             <br />
-            <a href="https://eu.super73.com/" target="_blank"> Supper73</a>
+            <a href="https://eu.super73.com/" target="_blank"> Super73</a>
             <br />
             <a href="https://www.ultimate-guitar.com/" target="_blank"
                 >Ultimate guitar</a>
