--- a/inspo.html
+++ b/inspo.html
@@ -9,39 +9,50 @@
     </head>
     <body>
         <header>
-            <h2 class="rubrik">Kampsport, Cykling & Musik</h2>           <!--mellan rubrik-->
-            <br /><br />
-            <p>
-                På fritiden håller jag på med cykling och musik, jag har även tränat kamsport i 10 år.</p>  <!--text-->
-           
-            <br />
-            <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank">Combat Jujutsu</a>  <!-- insperationslänkar-->
-            <br />
-            <a href="https://eu.super73.com/" target="_blank"> Super73</a>
-            <br />
-            <a href="https://www.ultimate-guitar.com/" target="_blank"
-                >Ultimate guitar</a>
-            <br />
-            <br />
+            <h2 class="rubrik">Kampsport, Cykling & Musik</h2>
         </header>
+        <!--mellan rubrik-->
+        <br /><br />
+        <nav>
+            <a href="index.html" id="startsida">Startsida</a> |
+            <!--navigations bar -->
+            <a href="kontakt.html" id="kontakt">Kontaktsida</a>
+        </nav>
         <section>
-        <a href="index.html" id="startsida">Startsida</a> |          <!--navigations bar -->
-        <a href="kontakt.html" id="kontakt">Kontaktsida</a>
+            <br/><br/>
+            <p>
+                På fritiden håller jag på med cykling och musik, jag har även
+                tränat kamsport i 10 år.
+            </p>
+            <!--text-->
+            <br />
+            <li>
+                <a href="http://www.combatjujutsuryu.se/mbk/" target="_blank"
+                    >Combat Jujutsu</a>                                             <!-- insperationslänkar-->
+            </li>
+            <li>
+                <a href="https://eu.super73.com/" target="_blank"> Super73</a>
+            </li>
+            <li>
+                <a href="https://www.ultimate-guitar.com/" target="_blank"
+                    >Ultimate guitar</a>
+            </li>
+            <br />
+            <br />
         </section>
-
         <footer>
-            
             <a
                 href="https://www.instagram.com/lukasjanfelt/?next=%2F"
-                target="_blank">                                                <!--socila medier-->
-                <img src="insta.png" alt="insta" id="instagram" />
+                target="_blank">
+                <!--socila medier-->
+                <img src="insta.png" alt="insta" id="instagram"/>
             </a>
-
             <a href="https://www.facebook.com/lukas.janfelt/" target="_blank">
-                <img src="FB.jpg" alt="Lukas facebook" id="facebook" />
+                <img src="FB.jpg" alt="Lukas facebook" id="facebook"/>
             </a>
             <br />
-            &copy; Copyright 2023 HTML.Lukas.Janfelt                 <!--copyright -->
+            &copy; Copyright 2023 HTML.Lukas.Janfelt
+            <!--copyright -->
         </footer>
     </body>
 </html>
